--- a/app/src/main/res/anim/translate.xml
+++ b/app/src/main/res/anim/translate.xml
@@ -2,13 +2,11 @@
 <set
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <translate
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:fromXDelta="0%"
-        android:toXDelta="0%"
-        android:fromYDelta="200%"
-        android:toYDelta="0%"
-        android:duration="2000"
-        android:zAdjustment="top" />
+    <alpha android:fromAlpha="0.0"
+        android:toAlpha="1.0"
+        android:interpolator="@android:anim/accelerate_interpolator"
+        android:duration="900"
+        android:repeatMode="reverse"
+        android:repeatCount="infinite"/>
 
 </set>
