--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,7 +56,8 @@
                     android:layout_margin="3dp"
                     android:textColor="@color/login_edit_text_color"
                     android:background="@drawable/input_styles"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp"
+                    android:inputType="text"/>
 
 
                 <TextView
